kubernetes/prod/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ai-assistant-deploy-backend-prod
  namespace: ai-assistant-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-assistant-prod-backend
  template:
    metadata:
      labels:
        app: ai-assistant-prod-backend
    spec:
      containers:
      - name: backend-prod
        image: BACKEND_STRING_TO_BE_REPLACED
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "400m"
          limits:
            memory: "1Gi"
            cpu: "800m"
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      - name: background-workers-prod
        image: BACKEND_STRING_TO_BE_REPLACED
        imagePullPolicy: Always
        command: ["python", "-m", "taskiq", "worker", "background_workers.brokers.background_tasks_message_broker:background_tasks_message_broker"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
      imagePullSecrets:
      - name: ai-assistant-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: ai-assistant-service-backend-prod
  namespace: ai-assistant-prod
  labels:
    app: ai-assistant-prod-backend
spec:
  type: ClusterIP
  selector:
    app: ai-assistant-prod-backend
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
