kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-assistant-ingress-prod
  namespace: ai-assistant-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ai-assistant-prod.zymran.com
    secretName: ai-assistant-prod-tls
  rules:
  - host: ai-assistant-prod.zymran.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ai-assistant-service-backend-prod
            port:
              number: 8000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: ai-assistant-service-backend-prod
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-assistant-service-frontend-prod
            port:
              number: 3000
